@@ -1,0 +1,61 @@
+#ifndef PSANA_USDUSB_DDL_H
+#define PSANA_USDUSB_DDL_H 1
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <vector>
+#include "ndarray/ndarray.h"
+#include "pdsdata/xtc/TypeId.hh"
+namespace Psana {
+namespace UsdUsb {
+
+/** @class ConfigV1
+
+  
+*/
+
+
+class ConfigV1 {
+public:
+  enum { TypeId = Pds::TypeId::Id_UsdUsbConfig /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 1 /**< XTC type version number */ };
+  enum { NCHANNELS = 4 };
+  enum Count_Mode {
+    WRAP_FULL,
+    LIMIT,
+    HALT,
+    WRAP_PRESET,
+  };
+  enum Quad_Mode {
+    CLOCK_DIR,
+    X1,
+    X2,
+    X4,
+  };
+  virtual ~ConfigV1();
+  virtual ndarray<uint32_t, 1> counting_mode() const = 0;
+  virtual ndarray<uint32_t, 1> quadrature_mode() const = 0;
+};
+
+/** @class DataV1
+
+  
+*/
+
+
+class DataV1 {
+public:
+  enum { TypeId = Pds::TypeId::Id_UsdUsbData /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 1 /**< XTC type version number */ };
+  enum { Encoder_Inputs = 4 };
+  enum { Analog_Inputs = 4 };
+  enum { Digital_Inputs = 4 };
+  virtual ~DataV1();
+  virtual uint8_t digital_in() const = 0;
+  virtual uint32_t timestamp() const = 0;
+  /** Lower 24 bits of encoder_count as signed integer value. */
+  virtual int32_t value(uint32_t i) const = 0;
+};
+} // namespace UsdUsb
+} // namespace Psana
+#endif // PSANA_USDUSB_DDL_H
