@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-11
+2012-10-08 Andy Salnikov
+- upgrading to pdsdata V04-02-01
+- regenerate whole thing from psddldata V00-03-09
+
 Tag: V00-03-10
 2012-09-28 Andy Salnikov
 - upgrading to pdsdata V04-01-00
